--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -10,6 +10,19 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Empty\EmptyApplication.cpp" />
+    <ClCompile Include="..\Framework\Common\BaseApplication.cpp" />
+    <ClCompile Include="..\Framework\Common\main.cpp" />
+    <ClCompile Include="..\Platform\Windows\helloworld_win.c" />
+    <ClCompile Include="helloengine_xcb.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Framework\Common\BaseApplication.hpp" />
+    <ClInclude Include="..\Framework\Interface\IApplication.hpp" />
+    <ClInclude Include="..\Framework\Interface\Interface.hpp" />
+    <ClInclude Include="..\Framework\Interface\IRuntimeModule.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F8E8BF6A-E74A-40A7-A9E7-61C4D26B1091}</ProjectGuid>
     <RootNamespace>engine</RootNamespace>
@@ -38,7 +51,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>$(SolutionDir)Framework\Common;$(SolutionDir)Framework\Interface;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -47,6 +62,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -63,8 +79,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
