--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="helloengine_xcb.c">
       <Filter>源文件\Platform\Linux</Filter>
     </ClCompile>
+    <ClCompile Include="..\Platform\Windows\helloengine_d2d.cpp">
+      <Filter>源文件\Platform\Windows</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Framework\Common\BaseApplication.hpp">
